# GameOptimizerPro

./: .gitignore  .markdownlint.json  CMakeLists.txt  GameOptimizerPro.rc  LICENSE_ZH.md  LICENSE_ZH.txt  README.md  build_all.bat
cmake/: version.h.in
config/: config.json
docs/: project_doc.md
include/config/: app_config.h  optimism_config.h  power_plan.h  process_config.h  process_info.h  system_info.h
include/core/: application.h  config_manager.h  optimizer.h  power_manager.h  process_manager.h  registry_manager.h  service_manager.h
include/log/: logging.h
include/ui/: mainwnd.h  tray_app.h
include/ui/components/: switchbutton.h
include/utils/: event_sink.h  registry_key.h  system_utils.h
lib/x64/debug/: switchbuttond.lib
lib/x64/release/: switchbutton.lib
resources/: icons_rc.py  res.qrc
src/: main.cpp
src/config/: app_config.cpp  optimism_config.cpp  power_plan.cpp  process_config.cpp  process_info.cpp  system_info.cpp
src/core/: application.cpp  config_manager.cpp  optimizer.cpp  power_manager.cpp  process_manager.cpp  registry_manager.cpp  service_manager.cpp
src/log/: logging.cpp
src/ui/: mainwnd.cpp  mainwnd.ui  mainwnd_ui.py  tray_app.cpp
src/utils/: event_sink.cpp  system_utils.cpp
